--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+appdirs==1.4.3
+dj-database-url==0.4.2
 Django==1.9.2
-Pillow==3.1.1
 django-filter==0.12.0
 djangorestframework==3.2.4
 flake8==2.5.4
+gunicorn==19.7.1
 mccabe==0.4.0
+packaging==16.8
 pep8==1.7.0
-pyflakes==1.0.0
+Pillow==3.1.1
 psycopg2==2.6.1
+pyflakes==1.0.0
+pyparsing==2.2.0
+six==1.10.0
